# cpp_utils

./: CMakeLists.txt  README.md
IsStreamable/: CMakeLists.txt  README.md
IsStreamable/src/: CMakeLists.txt  IsStreamable.hh
UniformRandNumGen/: CMakeLists.txt
UniformRandNumGen/src/: CMakeLists.txt  UniformRandIntGen.hh  UniformRandNumGen.hh
safeLibcCall/: CMakeLists.txt  README.md
safeLibcCall/cmake/: Getcmake_utils.cmake
safeLibcCall/src/include/: safeLibcCall.hh
safeLibcCall/test/: CMakeLists.txt  safeLibcCall_test.cc
safe_libc_call/: CMakeLists.txt  README.md
safe_libc_call/src/: CMakeLists.txt
safe_libc_call/src/include/: safeLibcCall.hh
typeName/: CMakeLists.txt  README.md
typeName/cmake/: Getcmake_utils.cmake
typeName/src/: CMakeLists.txt  typeName.hh
typeName/test/: CMakeLists.txt  typeName_test.cc
